[package]
name = "acoustino"
version = "0.1.0"
description = "A Tauri App"
authors = ["Sreyas Sreelal"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
tauri = { version = "1.2", features = [ "dialog-open", "shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31.0"
phf = { version = "0.11.2", features = ["macros"] }
zip-extract = "0.1.3"
glob = "0.3.1"
uuid = "1.7.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
